               `Promise[Boolean]`.
  * util-core: rename VarSource to ActivitySource. remove
               com.twitter.io.exp.VarSource.Result, return Activity[T]
               instead of Var[VarSource.Result[T]]. Remove FailoverVarSource in
               favor of ActivitySource.orElse.
  * util-core: `TimeFormat` now throws IllegalArgumentException if the pattern
	              uses the week year ('Y') without the week number ('w')

Changes in Runtime Behavior:
  * util-core: Futures still rethrow on fatals, but now also Monitor.handle on
               them.

  * util-core: `Future.onFailure` now only applies a `PartialFunction` if
               `PartialFunction.isDefinedAt` returns true.

  * util-core: `AsyncSemaphore` now requires that `initialPermits` be positive.

6.24.0 2014-12-12

New Features:
  * util-core: Add method .flushBatch() to batched future returned by Future.batched()
               that immediately initiates processing of all remaining queued requests
  * util-core: Add Future.collect() method that collects over Map's values
  * util-stats: Create a new module, `util-stats` to move `finagle-core`
                StatsReceivers to.  They retain the `com.twitter.finagle`
                namespace to ease the transition.

Deprecation:
  * util-stats: Deprecate `com.twitter.finagle.stats.StatsReceiver#time{,TimeFuture}`.
                Instead, please use the `com.twitter.finagle.stats.Stat` helpers
                from scala, and the `com.twitter.finagle.stats.JStats` helpers
                from java.

API Changes:
  * util-cache: Remove unused com.twitter.cache.Mod trait and object
  * util-core: Rename Buf._.Unsafe to Buf._.Owned and Buf._.Copied to Buf._.Shared
  * util-core: Remove the com.twitter.util.repository package
  * util-core: Change return type of Future.batched() to com.twitter.util.Batcher

Java Compatibility:
  * util-app: Flaggable is now an abstract class for Java compatibility